Update backend URL to production server

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
   <script>
     // 🚀 URL del backend (Node.js con Express)
-    const BACKEND_URL = "http://localhost:3000";  // <-- actualiza con tu dominio si lo cambias
+    const BACKEND_URL = "https://menu-3a-backend.onrender.com";  // <-- actualiza con tu dominio si lo cambias
 
     const ADMIN_PASS = "RH3A2025";
 
